--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -16,6 +17,11 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="E:/Downloads/testng-7.10.2.jar"/>
+	<classpathentry kind="lib" path="E:/Software and Apps/commons-io-2.20.0-bin/commons-io-2.20.0/commons-io-2.20.0.jar"/>
+	<classpathentry kind="lib" path="E:/Software and Apps/commons-io-2.20.0-bin/commons-io-2.20.0/commons-io-2.20.0-javadoc.jar"/>
+	<classpathentry kind="lib" path="E:/Software and Apps/commons-io-2.20.0-bin/commons-io-2.20.0/commons-io-2.20.0-sources.jar"/>
+	<classpathentry kind="lib" path="E:/Software and Apps/commons-io-2.20.0-bin/commons-io-2.20.0/commons-io-2.20.0-tests.jar"/>
+	<classpathentry kind="lib" path="E:/Software and Apps/commons-io-2.20.0-bin/commons-io-2.20.0/commons-io-2.20.0-test-sources.jar"/>
+	<classpathentry kind="lib" path="E:/Software and Apps/testng-7.10.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
