--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
     <scope>test</scope>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>6.3.1</version>
+</dependency>
+
   </dependencies>
   
   <build>
